--- a/resources/assets/scss/_layout.scss
+++ b/resources/assets/scss/_layout.scss
@@ -32,7 +32,7 @@ article{
 .top-navbar{
     box-sizing: border-box;
     padding-left: $topNavbarH;
-    padding-top: 0.5rem;
+    //padding-top: 0.5rem;
 }
 .side-navbar{
     box-sizing: border-box;
