--- a/resources/assets/scss/_theme.scss
+++ b/resources/assets/scss/_theme.scss
@@ -49,21 +49,166 @@ ul.accordion{
   }
 }
 */
+.brand{
+  float: left;
+  height: 100%;
+  width: 70px;
+  a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    height: 100%;
+    width: 100%;
+
+    span{
+      display: block;
+      color: white;
+    }
+  }
+}
+
+.auth-toggler{
+  font-size: 0.8rem;
+  display: flex;
+  height: 100%;
+  justify-content: space-around;
+
+  label{
+    flex: 1 1 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    &.focus{
+      background: #2475a5;
+    }
+
+    svg{
+      margin: 0 0.5rem;
+      width: 1rem;
+      height: 1rem;
+    }
+  }
+}
+
+
+
+// hide radio inputs for selected slider items
+input[type=radio].slider-radio{
+  display: none;
+  // show item below on checked radio
+  &:checked + *{
+    display: block;
+  }
+}
+
+.slider-wrapper{
+  position: relative;
+  margin: 0 auto;
+  max-width: 400px;
+  width: 100%;
+  box-shadow: 1px 2px 5px 1px rgba(0,0,0,0.2);
+  padding: 1rem 2rem 2rem 2rem;
+  background: white;
+  // hide all in slider wrapper
+  &>*{
+    display: none;
+  }
+}
+
 .res-form{
+  width: 100%;
+  .res-form-group{
+    //padding-top: 2rem;
+    display: flex;
+    position: relative;
+
+    input{
+      color: $fontC;
+      width: 100%;
+      text-align: left;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid rgba(0,0,0,.1);
+      display: block;
+      height: 2.5rem;
+      font-size: 1rem;
+      //line-height: 24px;
+
+      &:focus{
+        //border: none;
+        outline: none;
+        //outline-offset: -2px;
+      }
+    }
+
+    label{
+      width: 100%;
+      position: absolute;
+      left:0;
+      bottom: 0.5rem;
+      color: rgba(0,0,0,.3);
+      transform-origin: bottom left;
+      transition: transform .2s ease-in-out;
+
+      &.focus{
+        color: #4285f4;
+        transform: scale(.75) translateY(-2.5rem);
+      }
+    }
+
+  }
+
+  &>*{
+    display: block;
+    margin-top: 2rem;
+  }
+
+  button{
+    margin-left: auto; margin-right: auto;
+    background: $niceBlueColor;
+    color: white;
+    white-space: nowrap;
+    line-height: 20px;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    //text-transform: uppercase;
+    //min-width: 88px;
+    //position: relative;
+
+    &:hover{
+      background: #2475a5;
+    }
+    span{
+      margin: 8px 16px;
+    }
+  }
+}
+
+/*.res-form{
   padding: 1.5rem;
   margin: 1rem 0;
   background: white;
   border: 1px solid $niceBlueColor;
   box-shadow: 2px 2px 5px rgba(0,0,0, .5);
 
-  .res-form-groups{
+  .res-form-group{
 
 
     &.form-error *{
       color: red;
     }
   }
-}
+}*/
 
 
 
